# RNAmotiFold

./: .gitmodules  CMakeLists.txt  README.md  RNAmotiFold.py  requirements.txt  setup.py  setup_gapc.py
CMakes/: BISON-3.8.cmake  Boost-1.8.6.cmake  FLEX-2.6.4.cmake  GSL-2.8.cmake  GSL-latest.cmake  gapcM-latest.cmake
src/: RNALoops.py  args.py  bgap_rna.py  config.ini  motif_collection.py  motif_test.py  process.py  results.py  rfam_sequences.py  update_motif_collection.py  update_motifs.py
src/backups/: bgsu386_sequences.txt  bgsu387_sequences.txt  bgsu_386.hh  bgsu_387.hh
src/data/: config.ini  defaults.ini  motifs.json  nucleotide_conversion.json  rfam_internals_fw.csv
src/data/motifs/: rfam_hairpins.csv  rfam_hairpins_fw.csv  rfam_internals.csv  rfam_internals_fw.csv
